--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/User007/Downloads/gson-2.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User007/Downloads/gson-2.6.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
